Set up connection string

--- a/PubAPI/appsettings.json
+++ b/PubAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PubConnection": "Server = (localdb)\\MSSQLLocalDB; Initial Catalog = PubDatabase;"
+    "PubConnection": "Server=127.0.0.1,1433;Database=PubDatabase;User Id=SA;Password=mospec-6teXxo-wiwgec;TrustServerCertificate=true"
   }
 }
